fixed a quick spacing issue

--- a/stylesheets/site.scss
+++ b/stylesheets/site.scss
@@ -106,6 +106,8 @@ button {
   }
 }
 
+.result-container { padding-top: 25px; }
+
 // INPUT STYLES ===========================
 label {
   display: inline-block;
